@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: a0d085a2bb0e03f9d01fd3935ae3d4cf) *)
+(* DO NOT EDIT (digest: 61e9b030b1ff34b5d3a8d83e80e2a09e) *)
 (*
    Regenerated by OASIS v0.3.0
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5767,7 +5767,8 @@ let setup_t =
                "(C) 2012 Andre Nathan";
                "(C) 2013 Zhenya Lykhovyd";
                "(C) 2013 Mehdi Dogguy";
-               "(C) 2013 Roman Vorobets"
+               "(C) 2013 Roman Vorobets";
+               "(C) 2013 Pierre Chambart"
             ];
           maintainers = [];
           authors =
@@ -5783,7 +5784,8 @@ let setup_t =
                "Andre Nathan";
                "Zhenya Lykhovyd";
                "Mehdi Dogguy";
-               "Roman Vorobets"
+               "Roman Vorobets";
+               "Pierre Chambart"
             ];
           homepage = Some "http://extunix.forge.ocamlcore.org/";
           synopsis = "Extended functions for OCaml Unix module";
@@ -5906,6 +5908,7 @@ let setup_t =
                            "endianba.c";
                            "pread_pwrite_ba.c";
                            "bigarray.c";
+                           "splice.c";
                            "sysconf.c";
                            "common.c";
                            "common.h"
@@ -6071,7 +6074,8 @@ let setup_t =
                            "Andre Nathan";
                            "Zhenya Lykhovyd";
                            "Mehdi Dogguy";
-                           "Roman Vorobets"
+                           "Roman Vorobets";
+                           "Pierre Chambart"
                         ];
                       doc_abstract = None;
                       doc_format = HTML "index.html";
@@ -6091,7 +6095,7 @@ let setup_t =
           };
      oasis_fn = Some "_oasis";
      oasis_version = "0.3.0";
-     oasis_digest = Some " \025\140>\130\219\185?\206\202\222\170\183\2029H";
+     oasis_digest = Some "v\207\182~\152\025\160\220r\222 %\231\235`-";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false;
@@ -6099,6 +6103,6 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 6103 "setup.ml"
+# 6107 "setup.ml"
 (* OASIS_STOP *)
 let () = setup ();;
